--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
 .container {
     padding: 3rem;
-    background-color:beige;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100vh;
+}
+
+.light {
+    background-color:beige;
+    color: black;
+}
+
+.dark {
+    background-color:black;
+    color: white;
 }
 
 h1 {
